# POT-Project-Overview-Tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _project_overview.txt  check_dependencies.py  pot_cleanup.sh  project_overview.py  pyproject.toml  requirements.txt  setup.py
Tools/: project_overview.py
VLTRE/: cli.py  clipboard.py  config.py  config_loader.py  display.py  reports.py  tree_progress.py  user_data.py  utils.py
pot/: add_to_path.py  cli.py  config.py  utils.py
stages/: stage0.txt  stage1.txt  stage2.txt  stage3.txt  stage4.txt
tests/: test_cli_features.py
