[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "POT"
version = "0.0.3"
description = "Pot - Project Overview Tool"
authors = [{ name = "Dylan Krueger" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# Dependencies
dependencies = [
    "matplotlib",
    "colorama",
    "pyperclip",
    "psutil",
    "tqdm"
]

[tool.setuptools.package-data]
VLTRE = ["stages/*"]

[project.urls]
"Homepage" = "https://github.com/yourusername/pot"
"Repository" = "https://github.com/yourusername/pot"
"Documentation" = "https://github.com/yourusername/pot#readme"

# Add this section for CLI entry point
[project.scripts]
POT = "VLTRE.cli:main"